test/compilable/imports/fwdref8412uni_tab.d
module imports.fwdref8412uni_tab;

import fwdref8412uni;

immutable NFC_QCN = RleBitSet!uint();

